--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body>
 
     <header>
-        <img src="your-profile-picture.jpg" alt="Profil Picture">
+        <img src="ahri.jpg" alt="Profil Picture">
         <h1>Nama Anda</h1>
         <p>Deskripsi singkat tentang diri Anda.</p>
     </header>
