--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <img src="ahri.jpg" alt="Profil Picture">
         <h1>Muh. Ahri Romizah</h1>
-        <p>Deskripsi singkat tentang diri Anda.</p>
+        <p>Asal Pangkep, Sulawesi Selatan</p>
     </header>
 
     <section>
