--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section>
         <h2>Proyek Terbaru</h2>
         <ul class="projects">
-            <li>Website Portofolio</li>
+            <li>Website Profil</li>
             <li>Aplikasi Manajemen Tugas</li>
             <li>Sistem Informasi Inventaris</li>
             <!-- Tambahkan proyek Anda sendiri -->
