ubah isi projek 3

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul class="projects">
             <li>Website Profil</li>
             <li>Aplikasi Manajemen Tugas</li>
-            <li>Sistem Informasi Inventaris</li>
+            <li>Sistem Informasi Geografis</li>
             <!-- Tambahkan proyek Anda sendiri -->
         </ul>
     </section>
