--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section>
         <h2>Kontak</h2>
-        <p>Email: anandalyah26@gmail.com</p>
+        <p>Email: ahri.romizah@gmail.com</p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/yourusername/" target="_blank">Your LinkedIn Profile</a></p>
         <!-- Tambahkan kontak lainnya sesuai kebutuhan -->
     </section>
