--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section>
         <h2>Kontak</h2>
         <p>Email: ahri.romizah@gmail.com</p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/yourusername/" target="_blank">Your LinkedIn Profile</a></p>
+        <p>LinkedIn: <a href="https://github.com/ahri24/ahri" target="_blank">Your LinkedIn Profile</a></p>
         <!-- Tambahkan kontak lainnya sesuai kebutuhan -->
     </section>
 
