ubah deskripsi profil

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <header>
         <img src="ahri.jpg" alt="Profil Picture">
-        <h1>Muh. Ahri Romizah</h1>
-        <p>Asal Pangkep, Sulawesi Selatan</p>
+        <h1>Muh. Ahri Romizah Arfian</h1>
+        <p>Asal Pangkep, Sulawesi Selatan, Indonesia</p>
     </header>
 
     <section>
