ubah daftar projek

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </section>
 
     <section>
-        <h2>Proyek Terbaru</h2>
+        <h2>Pengalaman Projek</h2>
         <ul class="projects">
-            <li>Website Profil</li>
-            <li>Aplikasi Manajemen Tugas</li>
-            <li>Sistem Informasi Geografis</li>
+            <li>Website Kemenag</li>
+            <li>Aplikasi Keuangan</li>
+            <li>Sistem Informasi Rumah Sakit</li>
             <!-- Tambahkan proyek Anda sendiri -->
         </ul>
     </section>
