ubah informasi kontak

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
     <section>
         <h2>Kontak</h2>
-        <p>Email: ahri.romizah@gmail.com</p>
-        <p>LinkedIn: <a href="https://github.com/ahri24" target="_blank">Your LinkedIn Profile</a></p>
+        <p>Email: 60900121068@uin-alauddin.ac.id</p>
+        <p>Github: <a href="https://github.com/ahri24" target="_blank">Your Github Profile</a></p>
         <!-- Tambahkan kontak lainnya sesuai kebutuhan -->
     </section>
 
