--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </section>
 
     <footer>
-        &copy; 2023 Profil Saya
+        &copy; @Muh. Ahri Romizah - 60900121068
     </footer>
 
 </body>
