tambah pengalaman organisasi

--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
     </section>
 
     <section>
+        <h2>Pengalaman Organisasi</h2>
+        <ul class="projects">
+            <li>Inready</li>
+            <li>KMM</li>
+            <li>GDSC</li>
+            <!-- Tambahkan proyek Anda sendiri -->
+        </ul>
+    </section>
+
+    <section>
         <h2>Kontak</h2>
         <p>No.hp : 081340030654</p>
         <p>Email: 60900121068@uin-alauddin.ac.id</p>
