--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
     </section>
 
     <section>
+        <h2>Pengalaman Kerja</h2>
+        <ul class="job">
+            <li>General Manager</li>
+            <li>Data Science</li>
+            <li>Analyst Data</li>
+            <!-- Tambahkan proyek Anda sendiri -->
+        </ul>
+    </section>
+
+    <section>
         <h2>Kontak</h2>
         <p>No.hp : 081340030654</p>
         <p>Email: 60900121068@uin-alauddin.ac.id</p>
